[project]
name = "asd-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "matplotlib>=3.10.9",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm6.2"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm6.4"
